--- a/config/config.env
+++ b/config/config.env
@@ -1,13 +1,10 @@
 PORT=3000
-MONGO_URI=mongodb://localhost:27017/localhost
+MONGO_URI=mongodb+srv://sakurekaran56:karan123@hospita-lmanagement.7msro.mongodb.net/?retryWrites=true&w=majority&appName=Hospita-lManagement
 FRONTEND_URL=https://localhost:5173
 DASHBOARD_URL=https://localhost:5174
 JWT_SECRET_KEY=sakjdkjnsds
 JWT_EXPIRES=7D
 COOKIE_EXPIRES=7
-
 CLOUDINARY_CLOUD_NAME=dgdmqpny4
 CLOUDINARY_API_KEY=125925652273863
 CLOUDINARY_API_SECRET=LlawQ_Qng60AVI2ki5hFd7_f-Mw
-
-    
