--- a/config/config.env
+++ b/config/config.env
@@ -1,6 +1,6 @@
 MONGO_URI=mongodb+srv://sakurekaran56:karan123@hospita-lmanagement.7msro.mongodb.net/?retryWrites=true&w=majority&appName=Hospita-lManagement
 PORT=3000
-FRONTEND_URL=https://renovahospital.netlify.app/
+FRONTEND_URL=https://renovahospital.netlify.app
 DASHBOARD_URL=https://localhost:5174
 JWT_SECRET_KEY=sakjdkjnsds
 JWT_EXPIRES=7D
